--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title> Strona o mnie</title>
+    <h1>Strona o mnie</h1>
 </head>
 <body>
     Nazywam się Kuba, mam 16 lat. Lubię wiele sportów, a szczególnie górska jazde na rowerze i koszykówke. Poza tym interesuje się elektoniką i drukiem 3d. 
